welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: not found: value c
    ecritMessage(c)
                 ^ZigZag:15: error: not found: value c
    c = c+1
    ^ZigZag:16: error: value ! is not a member of Int
  } while (getX ! = getMondeLargeur-1)
                ^ZigZag:20: error: not found: value c
    ecritMessage(c)
                 ^ZigZag:21: error: not found: value c
     c = c+1
     ^ZigZag:22: error: value ! is not a member of Int
  } while (getX ! = 0)
                ^ZigZag:42: error: value ! is not a member of Int
  	} while (getX ! = 0)
                      ^